trunk/Archive2/15/d784858fec375e/output
main.cpp: In function 'short unsigned int checksum_crc16(unsigned char*, int)':
main.cpp:1:79: warning: no return statement in function returning non-void [-Wreturn-type]
 unsigned short checksum_crc16(unsigned char *in, int length) { /* do stuff */ }
                                                                               ^
main.cpp: In function 'int main(int, char**)':
main.cpp:5:38: error: cannot convert 'unsigned char (*)[5]' to 'unsigned char*' for argument '1' to 'short unsigned int checksum_crc16(unsigned char*, int)'
   checksum_crc16( &test, sizeof test );
                                      ^
